--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .font-outline-2 {
+      -webkit-text-stroke: 4px white;
+    }
+    .font-outline-4 {
+      -webkit-text-stroke: 4px black;
+    }
+  }
+/* @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,900");
+
+* {
+    font-family: "Poppins";
+  }
+   */
