--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,14 @@
 
 @layer base {
     .font-outline-2 {
-      -webkit-text-stroke: 2px white;
+      -webkit-text-stroke: 1px #4D4D4D;
     }
     .font-outline-4 {
       -webkit-text-stroke: 4px black;
     }
   }
-/* @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,900");
 
 * {
-    font-family: "Poppins";
+    font-family: "Arial";
   }
-   */
+   
